--- a/.gitignore
+++ b/.gitignore
@@ -59,8 +59,9 @@ ENV/
 env.bak/
 venv.bak/
 
-# Streamlit
+# Streamlit - exclude secrets but keep example
 .streamlit/secrets.toml
+!.streamlit/secrets.toml.example
 
 # IDE
 .vscode/
